<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FF5B48">

    <ImageView
        android:id="@+id/topSongTopper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/music_topper"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/numOne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/numOneSong"
        android:textColor="@color/white"
        android:textSize="80sp"
        android:textStyle="bold"

        app:layout_constraintEnd_toEndOf="@+id/topSongTopper"
        app:layout_constraintStart_toStartOf="@+id/topSongTopper"
        app:layout_constraintTop_toTopOf="@+id/topSongTopper"
        app:layout_constraintTop_toBottomOf="@+id/topSongTopper"/>

    <TextView
        android:id="@+id/playedSong"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/played_song"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topSongTopper" />

    <TextView
        android:id="@+id/stillHits"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/playedSongSubtitle"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/playedSong" />

    <LinearLayout
        android:id="@+id/TopLine"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/white"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/TopArtistBackground"/>

    <ImageView
        android:id="@+id/TopArtistBackground"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/top_artistBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stillHits" />

    <ImageView
        android:id="@+id/songCover"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/song_cover"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/TopArtistBackground" />

    <LinearLayout
        android:id="@+id/bottomLine"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/white"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TopArtistBackground" />

    <TextView
        android:id="@+id/songTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/topSong"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TopArtistBackground" />

    <TextView
        android:id="@+id/songArtist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/topSongArtist"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/songTitle" />

    <ImageView
        android:id="@+id/spotify_logo"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:background="@drawable/brand_spotify_green"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/spotify_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/spotify"
        android:textColor="#00db4d"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/spotify_logo" />

    <TextView
        android:id="@+id/spotify_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/spotifyLink"
        android:textColor="#00db4d"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.855"
        app:layout_constraintStart_toEndOf="@+id/spotify_text" />


</androidx.constraintlayout.widget.ConstraintLayout>